Fixed CSS issues with z-index in component_text_area

--- a/core/component_text_area/css/component_text_area.less
+++ b/core/component_text_area/css/component_text_area.less
@@ -215,13 +215,14 @@
 
 		// layer_selector (editing images)
 			.layer_selector {
-				width: 10em;
+				    width: 163px;
 				background-color: @color_orange_dedalo;
 				position: absolute;
 				right: 0;
 				top: 0;
 				padding: 0;
 				text-align: right;
+				z-index: 2;
 
 				>.button {
 					margin: 0.5em;
